Updating to 2705335cdd67ec1d376a0eaeee07814b7b311ce5.

--- a/c3s2/index.html
+++ b/c3s2/index.html
@@ -501,6 +501,32 @@ To git@heroku.com:arcane-gorge-2129.git
 </code></pre></div>
 <p>In the above block of code, as <code>5</code> is truthy, the variable <code>x</code> is set to <code>1</code>.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
+<p>The bar is trialling a new initiative: Tuesdays is ladies night at the pub - no men allowed and all drinks are 2-4-1! They want you to update Bouncer 2.0 appropriately.</p>
+
+<ol>
+<li>Add select boxes for sex and day on the form.</li>
+
+<li>Add new templates to be shown on ladies night to (a) turn away a customer if he is male (b) give them an extra drink if they are female.</li>
+
+<li>Add the required logic to <code>app.rb</code> to make it all work.</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="7_homework">
+	
+
+		<h2>Homework</h2>
+		<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>Finish the final exercise from class. Spend a bit of time trying to make the app look more presentable and ‘bouncer-like’.</li>
+
+<li>Do the <a href='http://www.codecademy.com/tracks/ruby'>Codecademy Ruby track</a> Sections 3 and 4.</li>
+</ol>
+</div>
+<h3 id="extension">Extension</h3>
+<div class='exercise alert alert-info'><strong>Task:</strong>
 <p>Change your sinatra app into something more interesting:</p>
 
 <ul>
@@ -512,20 +538,6 @@ To git@heroku.com:arcane-gorge-2129.git
 
 <li>Make it look nice, deploy it and show your friends.</li>
 </ul>
-</div>
-	</div>
-
-	
-	<div class="tab-pane " id="7_homework">
-	
-
-		<h2>Homework</h2>
-		<div class='exercise alert alert-info'><strong>Task:</strong>
-<ol>
-<li>Finish the final exercise from class. Make your Sinatra app into something you can show people!</li>
-
-<li>Do the <a href='http://www.codecademy.com/tracks/ruby'>Codecademy Ruby track</a> Sections 3 and 4.</li>
-</ol>
 </div>
 	</div>
 
