--- a/c1s4/index.html
+++ b/c1s4/index.html
@@ -225,7 +225,7 @@
 
 		<h2>Google Analytics</h2>
 		
-<p>Google Analytics is an analytics service provided for free by Google. It allows you get an overview of how many people are visiting your site, where they come from, what they do, and much more.</p>
+<p>Google Analytics is an analytics service provided for free by Google. It allows you get an overview of how many people are visiting your site, where they come from, what they do on your site, and much more.</p>
 
 <h3 id="google_analytics_vs_mixpanelkissmetrics">Google Analytics vs. Mixpanel/Kissmetrics</h3>
 
@@ -470,18 +470,6 @@
 
 <p>Add a form to collect the email address of people who visit your personal site. It should submit to a google form, which should then send you an email to let you know someone sent you their email address.</p>
 
-</div>
-<h3 id="start_on_the_landing_page_project">Start on the landing page project</h3>
-
-<p>For the final few weeks of the course you will be working on teams to design a landing page.</p>
-<div class='exercise alert alert-info'><strong>Task:</strong>
-<ol>
-<li>Form teams of 2-3 to work together.</li>
-
-<li>Read <a href='/ocl_project'>The Brief</a>, which directs you to build a landing page for the coding course. If you have a different idea that you’d rather work on, that’s fine - it just needs to be a landing page for something integrated with a form to collect people’s details.</li>
-
-<li>Make a start on your HTML, CSS and site copy. You’ll have the next two homeworks to work on this, but the more you get done now the better!</li>
-</ol>
 </div>
 	</div>
 
