Updating to 11503cafb6850fffad1e99d171eb97419a0d5721.

--- a/course2.html
+++ b/course2.html
@@ -36,11 +36,13 @@
 <h2 id="overall_aims">Overall aims</h2>
 
 <ul>
-<li>jquery</li>
+<li>to get lots more practice with HTML and CSS</li>
 
-<li>Collaboration with git</li>
+<li>to learn about and practice using git for collaboration</li>
 
-<li>Gain familiarity with the command line</li>
+<li>to meet jquery - mostly as a DOM manipulation/special effects tool, rather than covering javascript as a programming language</li>
+
+<li>to meet the command line and start getting comfortable moving around, trying git etc.</li>
 </ul>
 
 <h2 id="sessions">Sessions</h2>
@@ -48,6 +50,10 @@
 <ul>
 <li>
 <p><a href="c2prep">Preparation</a></p>
+
+<ul>
+<li>Rails installer to get the bash/windows emulator??</li>
+</ul>
 </li>
 
 <li>
