--- a/course3.html
+++ b/course3.html
@@ -101,14 +101,8 @@
 </li>
 
 <li>
-<p><a href="c3s3">Session 3</a></p>
+<p><a href="c3s3">Session 3</a> + Arrays, iterating <!-- + Building up an in-memory data store (using a constant?) --></p>
 
-<ul>
-<li>Arrays, iterating</li>
-
-<li>Hashes</li>
-</ul>
-<!-- + Building up an in-memory data store (using a constant?) -->
 <ul>
 <li>Reading in from a CSV file</li>
 
@@ -123,6 +117,8 @@
 <li>functions</li>
 
 <li>sending emails?</li>
+
+<li>Hashes</li>
 </ul>
 </li>
 
