--- a/c1s3/index.html
+++ b/c1s3/index.html
@@ -460,6 +460,14 @@ Change the background color of the <code>mission</code> section to <code>rgba(32
 <p>If you don’t already have a google account (e.g. via a gmail address), you need to sign up for one: <a href='https://accounts.google.com/SignUp'>https://accounts.google.com/SignUp</a>. You’ll need it in class next week!</p>
 
 </div>
+<h3 id="further_reading_on_css">Further reading on CSS</h3>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>(Optional) Read <a href='http://coding.smashingmagazine.com/2009/08/17/taming-advanced-css-selectors/'>this article</a> which explains about CSS Specificity (and more).</li>
+
+<li>(Optional) Read <a href='http://css-tricks.com/attribute-selectors/'>this article</a> on CSS selectors.</li>
+</ol>
+</div>
 	</div>
 
 </div>
