--- a/course3.html
+++ b/course3.html
@@ -114,8 +114,6 @@
 <p><a href="c3s4">Session 4</a></p>
 
 <ul>
-<li>functions</li>
-
 <li>sending emails?</li>
 
 <li>Hashes</li>
@@ -124,21 +122,37 @@
 
 <li>
 <p><a href="c4s1">Session 1</a></p>
+
+<ul>
+<li>functions</li>
+
+<li>lots of exercises with tests</li>
+
+<li>[hwk] refactor a sinatra app</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s2">Session 2</a></p>
+
+<ul>
+<li>more functions</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s3">Session 3</a></p>
+
+<ul>
+<li>mongodb/classes</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s4">Session 4</a></p>
 
 <ul>
-<li>intro to ruby on rails</li>
+<li>CRUD app</li>
 </ul>
 </li>
 </ul>
