Updating to 2a67c59d8d7ecbfc721ac8f0ad5d2a3cb371ba7d.

--- a/c3s4/index.html
+++ b/c3s4/index.html
@@ -134,7 +134,7 @@
 <span class='n'>h</span><span class='o'>.</span><span class='n'>length</span>
 <span class='n'>h</span><span class='o'>.</span><span class='n'>empty?</span>
 <span class='n'>h</span><span class='o'>.</span><span class='n'>keys</span>
-<span class='n'>k</span><span class='o'>.</span><span class='n'>values</span>
+<span class='n'>h</span><span class='o'>.</span><span class='n'>values</span>
 <span class='n'>h</span><span class='o'>.</span><span class='n'>has_key?</span><span class='p'>(</span><span class='s1'>&#39;one&#39;</span><span class='p'>)</span>
 <span class='n'>h</span><span class='o'>.</span><span class='n'>has_value?</span><span class='p'>(</span><span class='mi'>7</span><span class='p'>)</span>
 
