Updating to 8a5cd7ca5d97163c84d53b1664fab70ec0313428.

--- a/c3s4/index.html
+++ b/c3s4/index.html
@@ -380,7 +380,7 @@
 </li>
 
 <li>
-<p>In irb type <code>require pony</code>, then copy and paste in your updated options.</p>
+<p>In irb type <code>require 'pony'</code>, then copy and paste in your updated options.</p>
 </li>
 
 <li>
