Updating to 6ff27430e93703cde06987f666c2dafae6cf15a7.

--- a/c1prep/index.html
+++ b/c1prep/index.html
@@ -151,12 +151,14 @@
 
 <p>GitHub also allows you to put a static website online for free, using <a href="http://pages.github.com/">GitHub Pages</a>. We will be making use of this feature during the course.</p>
 
-<p>git itself is the sort of program that you have to run by typing commands into your computer’s command line. At some point, you will need to know how to do this but, for the time being, we’re going to use a <em>git client</em> - an point-and-click application to make git easier. In particular, we’re going to be using the git client provided by GitHub. Downloading GitHub’s git client will install both the git command line progam and the point-and-click application.</p>
+<h3 id="sourcetree">SourceTree</h3>
+
+<p>git itself is the sort of program that you have to run by typing commands into your computer’s command line. At some point, you will need to know how to do this but, for the time being, we’re going to use a <em>git client</em> - an point-and-click application to make git easier. In particular, we’re going to be using a free git client called SourceTree. Downloading SourceTree will install both the git command line progam and the point-and-click application.</p>
 <div class='exercise alert alert-info'><strong>Task:</strong>
 <ol>
 <li>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</li>
 
-<li>Download <a href='http://mac.github.com/'>GitHub for Mac</a> or <a href='http://windows.github.com/'>GitHub for Windows</a>. If you’re using linux, contact your course instructor.</li>
+<li>Download <a href='http://www.sourcetreeapp.com/'>SourceTree</a> for Windows or Mac. If you’re using linux, contact your course instructor.</li>
 </ol>
 </div>
 	</div>
