Updating to fd7fe929e61ba1037682778e2cd3cc136f7bafda.

--- a/course3.html
+++ b/course3.html
@@ -36,9 +36,7 @@
 <h2 id="sessions">Sessions</h2>
 
 <ul>
-<li>
-<p><a href="">Preparation</a></p>
-
+<li><a href="">Preparation</a>
 <ul>
 <li>Install ruby</li>
 
@@ -50,9 +48,7 @@
 </ul>
 </li>
 
-<li>
-<p><a href="c3s1">Session 1</a></p>
-
+<li><a href="c3s1">Session 1</a>
 <ul>
 <li>Ruby as an interpreted language, irb, comments</li>
 
@@ -76,9 +72,7 @@
 </ul>
 </li>
 
-<li>
-<p><a href="c3s2">Session 2</a></p>
-
+<li><a href="c3s2">Session 2</a>
 <ul>
 <li>Start with basic app using a post request and a conditional</li>
 
@@ -100,9 +94,7 @@
 </ul>
 </li>
 
-<li>
-<p><a href="c3s3">Session 3</a> + Arrays, iterating <!-- + Building up an in-memory data store (using a constant?) --></p>
-
+<li><a href="c3s3">Session 3</a> + Arrays, iterating <!-- + Building up an in-memory data store (using a constant?) -->
 <ul>
 <li>Reading in from a CSV file</li>
 
@@ -110,72 +102,14 @@
 </ul>
 </li>
 
-<li>
-<p><a href="c3s4">Session 4</a></p>
-
+<li><a href="c3s4">Session 4</a>
 <ul>
 <li>sending emails?</li>
 
 <li>Hashes</li>
 </ul>
 </li>
-
-<li>
-<p><a href="c4s1">Session 1</a></p>
-
-<ul>
-<li>functions</li>
-
-<li>lots of exercises with tests</li>
-
-<li>[hwk] refactor a sinatra app</li>
 </ul>
-</li>
-
-<li>
-<p><a href="c4s2">Session 2</a></p>
-
-<ul>
-<li>more functions</li>
-</ul>
-</li>
-
-<li>
-<p><a href="c4s3">Session 3</a></p>
-
-<ul>
-<li>mongodb/classes</li>
-</ul>
-</li>
-
-<li>
-<p><a href="c4s4">Session 4</a></p>
-
-<ul>
-<li>CRUD app</li>
-</ul>
-</li>
-</ul>
-
-<p>name can be a variable, a Constant, (an @instance variable, a @@class variable, $global) http://rubylearning.com/satishtalim/ruby_names.html</p>
-
-<p>adding numbers string interpolation</p>
-
-<p>(methods puts)</p>
-
-<p>sinatra: returns last expression in the block to the web browser, url matching, getting param from url, string interpolation deploying?</p>
-
-<p>SESSION2</p>
-
-<p>conditionals sinatra templates? (only showing values) form submissions? (with validations?) - example of a function?? FOAAS ?? / text-based game</p>
-
-<p>SESSION3</p>
-
-<p>collections &amp; iterating providing the contents of a file? similar to sinatra3?</p>
-
-<p>SESSION4</p>
-
-<p>hashes - explaining params, building an api?</p>
 
 
 
