--- a/course4.html
+++ b/course4.html
@@ -44,18 +44,38 @@
 
 <li>
 <p><a href="c4s1">Session 1</a></p>
+
+<ul>
+<li>functions: defining, calling</li>
+
+<li>lots of exercises with tests</li>
+
+<li>[hwk] refactor a sinatra app</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s2">Session 2</a></p>
+
+<ul>
+<li>more functions</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s3">Session 3</a></p>
+
+<ul>
+<li>mongodb/classes</li>
+</ul>
 </li>
 
 <li>
 <p><a href="c4s4">Session 4</a></p>
+
+<ul>
+<li>CRUD app</li>
+</ul>
 </li>
 </ul>
 
