--- a/c4s1/index.html
+++ b/c4s1/index.html
@@ -39,9 +39,243 @@
 <div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
+		
+		<li class="active"><a href="#1_motivating_functions" data-toggle="tab">Improving code </a></li>
+		
+	
+		
+		<li><a href="#2_functions" data-toggle="tab">Functions </a></li>
+		
+	
+		
+		<li><a href="#3_multiple_arguments" data-toggle="tab">More about arguments </a></li>
+		
+	
+		
+		<li><a href="#4_refactor_example" data-toggle="tab">Refactoring </a></li>
+		
+	
+		
+		<li><a href="#5_homework" data-toggle="tab">Homework </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
+
+	
+	<div class="tab-pane active" id="1_motivating_functions">
+	
+
+		<h2>Improving code</h2>
+		
+<p>This session we’re going to be looking at ways to improve the code you write. In particular, we’re going to see how to use <em>functions</em> to begin to separate out program logic into reusable chunks.</p>
+
+<h3 id="why_do_we_need_functions">Why do we need functions?</h3>
+
+<p>Take a look at this bit of code taken from a sinatra app:</p>
+<div class='highlight'><pre><code class='ruby'><span class='vi'>@swimmer_first_name</span>   <span class='o'>=</span> <span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>first</span>
+<span class='vi'>@swimmer_last_name</span>    <span class='o'>=</span> <span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>last</span>
+<span class='vi'>@swimmer_dob</span>          <span class='o'>=</span> <span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+
+<span class='vi'>@cyclist_first_name</span>   <span class='o'>=</span> <span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>first</span>
+<span class='vi'>@cyclist_last_name</span>    <span class='o'>=</span> <span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>last</span>
+<span class='vi'>@cyclist_dob</span>          <span class='o'>=</span> <span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+
+<span class='vi'>@runner_first_name</span>    <span class='o'>=</span> <span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>first</span>
+<span class='vi'>@runner_last_name</span>     <span class='o'>=</span> <span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>].</span><span class='n'>split</span><span class='o'>.</span><span class='n'>last</span>
+<span class='vi'>@runner_dob</span>           <span class='o'>=</span> <span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+</code></pre></div>
+<p>This code contains a lot of repetition. Some of the repetition might be unavoidable: we might really need to set up all those different instance variables to share with a view. Other bits aren’t and will cause us problems in the long run.</p>
+
+<p>The duplication of the logic for extracting the first and last name is particularly problematic:</p>
+
+<ul>
+<li>If we wanted to change the way a last name was extracted from a name (e.g to take into account names like ‘Pierre de Fermat’) we’d have to make changes in three places.</li>
+
+<li>The code is also cluttered and harder to make sense of than it needs to be: each time you read <code>.split.first</code> your brain has to convert that into ‘find the first name’. As a programmer you will spend more time reading code than writing it, so these considerations are important.</li>
+</ul>
+
+<p>A nicer way to write this code would be to use <code>first_name</code> and <code>last_name</code> functions, that contain the logic for splitting up the name:</p>
+<div class='highlight'><pre><code class='ruby'><span class='vi'>@swimmer_first_name</span>   <span class='o'>=</span> <span class='n'>first_name</span><span class='p'>(</span><span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@swimmer_last_name</span>    <span class='o'>=</span> <span class='n'>last_name</span><span class='p'>(</span><span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@swimmer_dob</span>          <span class='o'>=</span> <span class='vi'>@swimmer</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+
+<span class='vi'>@cyclist_first_name</span>   <span class='o'>=</span> <span class='n'>first_name</span><span class='p'>(</span><span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@cyclist_last_name</span>    <span class='o'>=</span> <span class='n'>last_name</span><span class='p'>(</span><span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@cyclist_dob</span>          <span class='o'>=</span> <span class='vi'>@cyclist</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+
+<span class='vi'>@runner_first_name</span>    <span class='o'>=</span> <span class='n'>first_name</span><span class='p'>(</span><span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@runner_last_name</span>     <span class='o'>=</span> <span class='n'>last_name</span><span class='p'>(</span><span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:name</span><span class='o'>]</span><span class='p'>)</span>
+<span class='vi'>@runner_dob</span>           <span class='o'>=</span> <span class='vi'>@runner</span><span class='o'>[</span><span class='ss'>:dob</span><span class='o'>]</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>Clone down the sinatra app for this session: <a href='https://github.com/code61/sinatra_c4s1'>https://github.com/code61/sinatra_c4s1</a>.</li>
+
+<li>Install the required libraries: <code>cd sinatra_c4s1</code> and then <code>bundle install</code>.</li>
+
+<li>Familiarise yourself with the app, by looking through the code and running the app from the command line (<code>ruby app.rb</code>).</li>
+
+<li>See if you can identify other places where logic could be cleaned up.</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_functions">
+	
+
+		<h2>Functions</h2>
+		
+<p>A <em>function</em> (or <em>method</em>) is a way of separating out a piece of programming logic so that you can use it elsewhere.</p>
+
+<h3 id="defining_and_calling_a_function">Defining and calling a function</h3>
+
+<p>There are two steps in using a function</p>
+
+<ol>
+<li><em>Define</em> the function: to define a function you need to give it a name and write the code contained in the function.</li>
+
+<li><em>Call</em> the function: when you use the function, we say that the function is being ‘called’. Calling a function causes the code inside it to be run.</li>
+</ol>
+<div class='highlight'><pre><code class='ruby'><span class='k'>def</span> <span class='nf'>first_name</span><span class='p'>(</span><span class='n'>full_name</span><span class='p'>)</span>
+  <span class='n'>full_name</span><span class='o'>.</span><span class='n'>split</span><span class='o'>.</span><span class='n'>first</span>
+<span class='k'>end</span>
+
+<span class='n'>first_name</span><span class='p'>(</span><span class='s1'>&#39;Tom Close&#39;</span><span class='p'>)</span> <span class='c1'>#=&gt; &#39;Tom&#39;</span>
+<span class='n'>first_name</span><span class='p'>(</span><span class='s1'>&#39;Ashok Menon&#39;</span><span class='p'>)</span> <span class='c1'>#=&gt; &#39;Ashok&#39;</span>
+</code></pre></div>
+<p>In the example above the function takes a single <em>parameter</em> (in this case the full name that you want to split up).</p>
+
+<ul>
+<li>When you call the function you give it the full name (e.g. <code>&quot;Tom Close&quot;</code>) as a string.</li>
+
+<li>The the variable <code>full_name</code>, that you specified in the function definition, is set to the name you provided. In this case this is equivalent to <code>full_name = &quot;Tom Close&quot;</code>.</li>
+
+<li>The statements inside the function body are then executed.</li>
+
+<li>The function <em>returns</em> the value of the last expression to be evaluated.</li>
+</ul>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li><strong>Fork</strong> and clone down the exercises for this session: <a href='https://github.com/code61/exercises_c4s1'>https://github.com/code61/exercises_c4s1</a></li>
+
+<li>Install the gems you need - in the <code>exercises_c4s1</code> folder, run: <code>bundle install</code></li>
+
+<li>Open <code>names.rb</code> in sublime text.</li>
+
+<li>Using the code above fill out the <code>first_name</code> function.</li>
+
+<li>Open <code>irb</code> and load in the file by running <code>load 'names.rb'</code>.</li>
+
+<li>Try the function out, by calling it in irb.</li>
+
+<li>Close <code>irb</code> and run the tests we’ve provided for the function by running <code>rspec spec/first_name_spec.rb</code>.</li>
+
+<li>Now try and write the body of the <code>last_name</code> function. Follow the same procedure of trying in irb, then running the test <code>rspec spec/last_name_spec.rb</code>.</li>
+
+<li>(Ext) Improve your <code>last_name</code> function, so that it can cope with composite last names (treating everything after the first name as the last name). Test your solution by running <code>rspec spec/ext_last_name_spec.rb</code></li>
+
+<li>(Ext) Work through the functions in <code>date.rb</code>. Test your solutions running the tests in files <code>spec/month_spec.rb</code>, <code>spec/last_digit_spec.rb</code>, <code>spec/penultimate_digit_spec.rb</code>, <code>spec/ordinal_suffix_spec.rb</code> and <code>spec/date_in_words_spec.rb</code>.</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="3_multiple_arguments">
+	
+
+		<h2>More about arguments</h2>
+		
+<p>So far we’ve only looked at functions with a single argument. What if we want to have no parameters, multiple parameters or a variable number?</p>
+
+<h3 id="functions_with_no_parameters">Functions with no parameters</h3>
+
+<p>It is sometimes useful to have a function with no parameters, often for a task that you need to perform repetitively:</p>
+<div class='highlight'><pre><code class='ruby'><span class='nb'>require</span> <span class='s1'>&#39;csv&#39;</span>
+
+<span class='k'>def</span> <span class='nf'>load_data</span>
+  <span class='c1'># read data in from the csv file</span>
+  <span class='n'>data</span> <span class='o'>=</span> <span class='no'>CSV</span><span class='o'>.</span><span class='n'>read</span><span class='p'>(</span><span class='s1'>&#39;tmp/students/data.csv&#39;</span><span class='p'>)</span>
+
+  <span class='c1'># remove the header row</span>
+  <span class='n'>data</span><span class='o'>[</span><span class='mi'>1</span><span class='o'>.</span><span class='n'>.</span><span class='o'>-</span><span class='mi'>1</span><span class='o'>]</span>
+<span class='k'>end</span>
+</code></pre></div>
+<p>When you call a function with no parameters, you don’t need to use brackets:</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>load_data</span> <span class='c1'>#=&gt; [[..], [..], [..], ...]</span>
+</code></pre></div><p class='small'>[In fact you don't need brackets when you're calling a function with arguments either. For the time being we'll use them though, to keep things simple.]</p>
+<h3 id="functions_with_multiple_parameters">Functions with multiple parameters</h3>
+
+<p>Defining and calling a function with multiple parameters is just like defining and calling one with a single parameter:</p>
+<div class='highlight'><pre><code class='ruby'><span class='k'>def</span> <span class='nf'>insult</span><span class='p'>(</span><span class='n'>word</span><span class='p'>,</span> <span class='n'>strength</span><span class='p'>)</span>
+  <span class='s2'>&quot;</span><span class='si'>#{</span><span class='n'>word</span><span class='o'>.</span><span class='n'>capitalize</span><span class='si'>}</span><span class='s2'> off&quot;</span> <span class='o'>+</span> <span class='s1'>&#39;!&#39;</span> <span class='o'>*</span> <span class='n'>strength</span>
+<span class='k'>end</span>
+
+<span class='n'>insult</span><span class='p'>(</span><span class='s1'>&#39;goose&#39;</span><span class='p'>,</span> <span class='mi'>4</span><span class='p'>)</span> <span class='c1'>#=&gt; &quot;Goose off!!!!&quot;</span>
+</code></pre></div>
+<p>When you call a function with multiple parameters, you need to make sure you provide the right number, otherwise you’ll get an error.</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>insult</span><span class='p'>(</span><span class='s1'>&#39;badger&#39;</span><span class='p'>,</span> <span class='mi'>4</span><span class='p'>,</span> <span class='mi'>5</span><span class='p'>)</span>
+<span class='c1'>#=&gt; ArgumentError: wrong number of arguments (3 for 2)</span>
+<span class='c1'>#=&gt; from (pry):2:in `insult&#39;</span>
+</code></pre></div>
+<h3 id="functions_with_optional_parameters">Functions with optional parameters</h3>
+
+<p>Sometimes it’s useful to be able to supply a parameter if you want, but use a sensible default otherwise:</p>
+<div class='highlight'><pre><code class='ruby'><span class='k'>def</span> <span class='nf'>i_love</span><span class='p'>(</span><span class='n'>thing</span> <span class='o'>=</span> <span class='s1'>&#39;ruby&#39;</span><span class='p'>)</span>
+  <span class='s2'>&quot;I love </span><span class='si'>#{</span><span class='n'>thing</span><span class='si'>}</span><span class='s2'>!&quot;</span>
+<span class='k'>end</span>
+
+<span class='n'>i_love</span><span class='p'>(</span><span class='s1'>&#39;coding&#39;</span><span class='p'>)</span> <span class='c1'>#=&gt; &quot;I love coding!&quot;</span>
+<span class='n'>i_love</span>           <span class='c1'>#=&gt; &quot;I love ruby!&quot;</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>Open <code>more_functions.rb</code> and begin to work your way throught the functions in the file.</li>
+
+<li>For each function you write, reload the file into irb to try it out: <code>load 'more_functions.rb'</code> (run this <strong>inside</strong> <code>irb</code>).</li>
+
+<li>For each function you write, run the appropriate test e.g.: <code>rspec spec/multiply_and_sum_spec.rb</code> (run this <strong>outside</strong> <code>irb</code>, on the command line).</li>
+
+<li>If you get onto the <code>describe_result</code> function, you will need to start by writing your own test in <code>spec/describe_result_spec.rb</code>. (Do this by copying and pasting from another test, and make the appropriate changes.)</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="4_refactor_example">
+	
+
+		<h2>Refactoring</h2>
+		
+<p><strong>Refactoring</strong> is the act of restructuring a piece of code <strong>without changing its behaviour</strong>. Refactoring is very important in software development, as without it software projects quickly become unweildy and difficulat to work with.</p>
+
+<p>You’re going to refactor the sinatra app, by completing the functions in the <code>helper_functions.rb</code> file.</p>
+<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>Open <code>app.rb</code> in Sublime Text.</li>
+
+<li>Uncomment the commented out <code>post</code> block at the bottom, and comment out the other one. This is how we want the code to look, but currently the functions aren’t there to make this work.</li>
+
+<li>Uncomment the line <code>require './helper_functions'</code> at the top of <code>app.rb</code></li>
+
+<li>Open the file <code>helper_functions.rb</code> in Sublime Text. Complete the functions so that the app works as before.</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="5_homework">
+	
+
+		<h2>Homework</h2>
+		<div class='exercise alert alert-info'><strong>Task:</strong>
+<ol>
+<li>Finish off any exercises from class.</li>
+
+<li>Do the <a href='http://www.codecademy.com/tracks/ruby'>Codecademy Ruby track</a> Sections 9 and 10.</li>
+</ol>
+</div>
+	</div>
 
 </div>
 
